Кнопка создания маршрута, расположение основной карты

--- a/VehicleRoutesBuildingWebApplication/Views/Clients/Add.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Clients/Add.cshtml
@@ -21,7 +21,7 @@
         <label for="" class="form-label">Адрес</label>
         <input type="text" id="adressBox" class="form-control" />
     </div>
-    <div id="map" style="width: 700px; height: 250px"></div>
+    <div id="map" style="width: 700px; height: 250px; margin-bottom: 10px "></div>
     <button type="submit" id="sendBtn" class="btn btn-primary">Добавить</button>
 </form>
 <script src="https://api-maps.yandex.ru/2.1/?apikey=a411f927-83b0-4fe6-ba1d-ebce6259b35c&lang=ru_RU"></script>
