--- a/VehicleRoutesBuildingWebApplication/Views/Home/Index.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Home/Index.cshtml
@@ -3,7 +3,15 @@
         ViewData["Title"] = "Стартовая страница";
 }
 
-<div id="map" style="width: 1250px; height: 600px"></div>
+<div style="display: flex; flex-direction: column; height: 80vh;">
+  <div style="flex: 1; position: relative;">
+    <div id="map-main" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0;"></div>
+    <div style="position: absolute; bottom: 10px; right: 10px; display: flex; flex-direction: row-reverse; justify-content: flex-end;">
+      <button type="submit" id="resultBtn" class="btn btn-primary" style="margin-left: 10px; width: 200px; color: black; background-color: white; border-color: black;">Сохранить результаты</button>
+      <button type="submit" id="routeBtn" class="btn btn-primary" style="width: 200px; color: black; background-color: white; border-color: black;">Создать маршруты</button>
+    </div>
+  </div>
+</div>
 
 <script src="https://api-maps.yandex.ru/2.1/?apikey=a411f927-83b0-4fe6-ba1d-ebce6259b35c&lang=ru_RU"></script>
 
@@ -12,10 +20,12 @@
 
             async function init() {
                 var myPlacemark,
-                map = new ymaps.Map(document.getElementById('map'), {
+                map = new ymaps.Map(document.getElementById('map-main'), {
                 center: [54.735152, 55.958736],
                 zoom: 7
             });
+
+            
 
             map.events.add('click', function (e) {
                 var coords = e.get('coords');
@@ -96,9 +106,10 @@
                 map.geoObjects.add(clientMark);
                 points.push(point);
             </text>
-        };         
+        };   
 
-        distribClientsByDepo();
+        let button = document.getElementById('routeBtn');
+        button.addEventListener('click', distribClientsByDepo);      
 
         function containsObject(obj, list) {
             var i;
