--- a/VehicleRoutesBuildingWebApplication/Views/Clients/Index.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Clients/Index.cshtml
@@ -23,7 +23,7 @@
                 <td>@client.PhoneNumber</td>
                 <td>@client.Location.Adress</td>
                 <td>@client.ProductWeight</td>
-                <td> <a href="Clients/Delete/@client.Id">Удалить</a></td>
+                <td> <a href="Clients/Delete/@client.Id" style="color: white;">Удалить</a></td>
             </tr>
         }
     </tbody>
