--- a/VehicleRoutesBuildingWebApplication/Views/Depots/Add.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Depots/Add.cshtml
@@ -14,7 +14,8 @@
         <input type="text" id="adressBox" class="form-control" />
     </div>
     <div id="map" style="width: 700px; height: 250px; margin-bottom: 10px "></div>
-    <button type="submit" id="sendBtn" class="btn btn-primary">Добавить</button>
+    <button type="submit" id="sendBtn" class="btn btn-primary" style="margin-top: 10px; width: 200px; color: black; background-color: white; border-color: black;">Добавить</button>
+ 
 </form>
 <script src="https://api-maps.yandex.ru/2.1/?apikey=a411f927-83b0-4fe6-ba1d-ebce6259b35c&lang=ru_RU"></script>
 <script>
