--- a/VehicleRoutesBuildingWebApplication/Views/Depots/Index.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Depots/Index.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 <td>@depo.Name</td>
                 <td>@depo.Location.Adress</td>
-                <td> <a href="Depots/Delete/@depo.Id">Удалить</a></td>
+                <td> <a href="Depots/Delete/@depo.Id" style="color: white;">Удалить</a></td>
             </tr>
         }
     </tbody>
