--- a/VehicleRoutesBuildingWebApplication/Views/Vehicles/Index.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Vehicles/Index.cshtml
@@ -22,7 +22,7 @@
                 <td>@vehicle.Name</td>
                 <td>@vehicle.Capacity</td>
                 <td>@vehicle.FuelConsumption</td>
-                <td> <a href="Vehicles/Delete/@vehicle.Id">Удалить</a></td>
+                <td> <a href="Vehicles/Delete/@vehicle.Id" style="color: white;">Удалить</a></td>
             </tr>
         }
     </tbody>
