--- a/VehicleRoutesBuildingWebApplication/Views/Home/Index.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Home/Index.cshtml
@@ -3,13 +3,11 @@
         ViewData["Title"] = "Стартовая страница";
 }
 
-<div style="display: flex; flex-direction: column; height: 80vh;">
-  <div style="flex: 1; position: relative;">
-    <div id="map-main" style="position: absolute; top: 0; left: 0; right: 0; bottom: 0;"></div>
-    <div style="position: absolute; bottom: 10px; right: 10px; display: flex; flex-direction: row-reverse; justify-content: flex-end;">
-      <button type="submit" id="resultBtn" class="btn btn-primary" style="margin-left: 10px; width: 200px; color: black; background-color: white; border-color: black;">Сохранить результаты</button>
-      <button type="submit" id="routeBtn" class="btn btn-primary" style="width: 200px; color: black; background-color: white; border-color: black;">Создать маршруты</button>
-    </div>
+<div style="display: flex; flex-direction: column; height: 80vh; position: relative;">
+  <div id="map-main" style="position: absolute; top: 0; left: 0; right: 0; bottom: 10px;"></div>
+  <div style="position: absolute; bottom: -50px; right: 10px; z-index: 1; overflow: visible;">
+    <button type="submit" id="resultBtn" class="btn btn-primary" style="margin-left: 10px; margin-top: 10px; width: 200px; color: black; background-color: white; border-color: black; float: right;">Сохранить результаты</button>
+    <button type="submit" id="routeBtn" class="btn btn-primary" style="width: 200px; margin-top: 10px; color: black; background-color: white; border-color: black; float: right; margin-right: 10px; margin-bottom: 10px; position: relative; z-index: 2;">Создать маршруты</button>
   </div>
 </div>
 
