--- a/VehicleRoutesBuildingWebApplication/Views/Shared/_Layout.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - VRP</title>
+    <title style="color: #b3b3b3 !important;">@ViewData["Title"] - VRP</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/VehicleRoutesBuildingWebApplication.styles.css" asp-append-version="true" />
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">VRP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -21,22 +21,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Index">Клиенты</a>
+                            <a class="nav-link text-#e7e8ec" asp-area="" asp-controller="Clients" asp-action="Index">Клиенты</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Clients" asp-action="Add">Добавить клиента</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Clients" asp-action="Add">Добавить клиента</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">Транспортные средства</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Vehicles" asp-action="Index">Транспортные средства</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Add">Добавить ТС</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Vehicles" asp-action="Add">Добавить ТС</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Depots" asp-action="Index">Депо</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Depots" asp-action="Index">Депо</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Depots" asp-action="Add">Добавить депо</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Depots" asp-action="Add">Добавить депо</a>
                         </li>
                     </ul>
                 </div>
@@ -48,13 +48,7 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - VRP - <a asp-area="" asp-controller="Home" asp-action="Privacy">Политика приватности</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
