--- a/VehicleRoutesBuildingWebApplication/Views/Vehicles/Add.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Vehicles/Add.cshtml
@@ -17,5 +17,6 @@
         <label for="" class="form-label">Расход топлива</label>
         <input type="number" id="fuelConsumptionBox" class="form-control" asp-for="FuelConsumption" />
     </div>
-    <button type="submit" id="sendBtn" class="btn btn-primary">Добавить</button>
+    <button type="submit" id="sendBtn" class="btn btn-primary" style="margin-top: 10px; width: 200px; color: black; background-color: white; border-color: black;">Добавить</button>
+
 </form>
