--- a/VehicleRoutesBuildingWebApplication/Views/Shared/_Layout.cshtml
+++ b/VehicleRoutesBuildingWebApplication/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                          <li class="nav-item">
+                              <a class="nav-link text-#e7e8ec" asp-area="" asp-controller="Home" asp-action="Index">Карта</a>
+                          </li>
                         <li class="nav-item">
                             <a class="nav-link text-#e7e8ec" asp-area="" asp-controller="Clients" asp-action="Index">Клиенты</a>
                         </li>
@@ -27,16 +30,13 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Clients" asp-action="Add">Добавить клиента</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Vehicles" asp-action="Index">Транспортные средства</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Vehicles" asp-action="Add">Добавить ТС</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Depots" asp-action="Index">Депо</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Depots" asp-action="Add">Добавить депо</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Vehicles" asp-action="Index">Настройки</a>
                         </li>
                     </ul>
                 </div>
